AnchorMonitor/templates/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
  labels:
    app: proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: gcr.io/factomd-dev/anchor-monitor-proxy
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: proxy-config
          mountPath: /etc/nginx/conf.d/default.conf  
          subPath: default.conf
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
