AnchorMonitor/templates/anchor_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: anchor-monitor-0
  labels:
    name: anchor-svc
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    role: anchor-monitor
